# template-python-package

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.package_distribution_name }}/: LICENSE  pyproject.toml
